--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.546.0",
-    "next": "^15.2.3",
+    "next": "16.1.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
@@ -50,8 +50,8 @@
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "drizzle-kit": "^0.30.5",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
@@ -60,5 +60,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
